environment variables updated

--- a/Frontend/Frontend/appsettings.json
+++ b/Frontend/Frontend/appsettings.json
@@ -1,6 +1,11 @@
 {
+  "FILEPROVIDER_UPLOAD_PROFILE_URI": "https://fileprovider-win23jsbackend-oliverml.azurewebsites.net/api/upload?container=profiles",
+  "COURSES_URI": "https://coursesprovider-win23jsbackend-oliverml.azurewebsites.net/api/courses",
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Frontend-d0753f4e-49f4-439b-877d-298c560eede8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:sql-win23jsbackend-oliverml.database.windows.net,1433;Initial Catalog=identitty_database;Persist Security Info=False;User ID=SqlAdmin;Password=BROsmash99!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
+
   },
   "Logging": {
     "LogLevel": {
